--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=pcbuild
+
+server.error.include-message=always
+
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true 
