--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,6 +1,15 @@
-spring.application.name=pcbuild
+# Local Database
+spring.datasource.url=jdbc:postgresql://localhost:5432/${POSTGRES_DATABASE}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-server.error.include-message=always
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
 
+# Enabling flyway to manage migrations
 spring.flyway.enabled=true
-spring.flyway.baseline-on-migrate=true 
+
+server.port=8080
+server.error.include-message=always
