--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 # Local Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/${POSTGRES_DATABASE}
-spring.datasource.username=${POSTGRES_USER}
-spring.datasource.password=${POSTGRES_PASSWORD}
+#spring.datasource.url=jdbc:postgresql://localhost:5432/${POSTGRES_DATABASE}
+#spring.datasource.username=${POSTGRES_USER}
+#spring.datasource.password=${POSTGRES_PASSWORD}
+#spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/pcbuild_db
+spring.datasource.username=pcbuild_admin
+spring.datasource.password=PcBuild_*@24#
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
